--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "279afccc",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,7 @@
     "import os\n",
     "import re\n",
     "import string\n",
-    "import enchant"
+    "# import enchant"
    ]
   },
   {
@@ -709,9 +709,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1eb6ced6",
+   "metadata": {},
+   "source": [
+    "## for clean 4000 words file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "34a5d4d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('4000-1.txt') as fd:\n",
+    "    lines = fd.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3d2996ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_words = []\n",
+    "for l in lines:\n",
+    "    if l != '\\n' and l[:4] != 'Unit' and l[:4] != 'Word':\n",
+    "        my_words.append(l[:-1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a047a3c1",
+   "id": "2a281af8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "96927e0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "75ecf121",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Word'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0166b524",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -733,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
