make word lowwer

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eb6ced6",
+   "id": "fd931929",
    "metadata": {},
    "source": [
     "## for clean 4000 words file"
@@ -718,19 +718,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "34a5d4d1",
+   "execution_count": 17,
+   "id": "ae3a0abe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('4000-1.txt') as fd:\n",
+    "with open('4000-2.txt') as fd:\n",
     "    lines = fd.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3d2996ef",
+   "execution_count": 18,
+   "id": "b35d5247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,43 +742,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2a281af8",
+   "execution_count": 19,
+   "id": "c7c679e3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('4000-2.md','w+') as f:\n",
+    "    for w in my_words:\n",
+    "        f.write(w+', ')\n",
+    "    f.write('\\n')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "96927e0e",
+   "id": "b8d05763",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "75ecf121",
+   "execution_count": null,
+   "id": "88ce4cb3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Word'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0166b524",
+   "id": "13e0e6e4",
    "metadata": {},
    "outputs": [],
    "source": []
