--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2162,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "2c75b2d9",
    "metadata": {},
    "outputs": [],
@@ -2173,32 +2173,517 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "bec80300",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'theory.” S. F. Mason, Science Digest, 5/98\\n'"
+       "['abhor', 'abjure']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lines[2].split('“')[0]"
+    "lines[1][:-1].split(' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ed4a3f42",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abhor', 'abjure']\n",
+      "['abortive', 'abound']\n",
+      "['abrogate', 'abstemious']\n",
+      "['absurd', 'access']\n",
+      "['accommodate', 'accomplice']\n",
+      "['accost', 'acknowledge']\n",
+      "['acme', 'acrimonious']\n",
+      "['acute', 'adamant']\n",
+      "['adherent', 'admonish']\n",
+      "['adroit', 'advent']\n",
+      "['adversary', 'adverse']\n",
+      "['advocate', 'aegis']\n",
+      "['afflict', 'affluent']\n",
+      "['alacrity', 'allay']\n",
+      "['alleged', 'alleviate']\n",
+      "['allude', 'aloof']\n",
+      "['altruistic', 'ambiguous']\n",
+      "['ameliorate', 'amicable']\n",
+      "['amnesty', 'amorous']\n",
+      "['analogous', 'anathema']\n",
+      "['annals', 'anomaly']\n",
+      "['anthropologist', 'antipathy']\n",
+      "['antiquated', 'antithesis']\n",
+      "['apathy', 'appalled']\n",
+      "['appellation', 'arbiter']\n",
+      "['arbitrary', 'archaic']\n",
+      "['ardent', 'array']\n",
+      "['articulate', 'artifact']\n",
+      "['artifice', 'artless']\n",
+      "['ascend', 'ascertain']\n",
+      "['ascetic', 'asinine']\n",
+      "['asperity', 'aspirant']\n",
+      "['aspire', 'asset']\n",
+      "['assiduous', 'astute']\n",
+      "['atrophy', 'attenuated']\n",
+      "['attest', 'atypical']\n",
+      "['au', 'courant', 'audacity']\n",
+      "['augment', 'austere']\n",
+      "['automaton', 'avarice']\n",
+      "['aversion', 'avid']\n",
+      "['badger', 'bagatelle']\n",
+      "['balk', 'banal']\n",
+      "['barometer', 'bedlam']\n",
+      "['begrudge', 'belated']\n",
+      "['belittle', 'belligerent']\n",
+      "['benevolent', 'bereft']\n",
+      "['besiege', 'besmirch']\n",
+      "['bias', 'bigot']\n",
+      "['bizarre', 'blasé']\n",
+      "['blatant', 'bliss']\n",
+      "['blunt', 'bogus']\n",
+      "['bona', 'fide', 'brash']\n",
+      "['brigand', 'bristle']\n",
+      "['buff', 'bulwark']\n",
+      "['cabal', 'cache']\n",
+      "['cacophony', 'cajole']\n",
+      "['callous', 'callow']\n",
+      "['calumny', 'canard']\n",
+      "['candid', 'candor']\n",
+      "['cant', 'capitulate']\n",
+      "['capricious', 'carnage']\n",
+      "['castigate', 'catastrophic']\n",
+      "['caustic', 'celerity']\n",
+      "['cessation', 'chagrin']\n",
+      "['charisma', 'charlatan']\n",
+      "['chicanery', 'chimerical']\n",
+      "['circuitous', 'clandestine']\n",
+      "['cliché', 'clique']\n",
+      "['coerce', 'cogent']\n",
+      "['cognizant', 'comely']\n",
+      "['commodious', 'compassion']\n",
+      "['compatible', 'compensatory']\n",
+      "['complacent', 'complicity']\n",
+      "['component', 'compound']\n",
+      "['comprehensive', 'concoct']\n",
+      "['concomitant', 'concur']\n",
+      "['condescend', 'condolence']\n",
+      "['condone', 'conducive']\n",
+      "['confidant(e)', 'conflagration']\n",
+      "['confront', 'congenial']\n",
+      "['conjecture', 'conjugal']\n",
+      "['connoisseur', 'connubial']\n",
+      "['consternation', 'constrict']\n",
+      "['construe', 'consummate']\n",
+      "['contemptuous', 'contort']\n",
+      "['controversial', 'cope']\n",
+      "['copious', 'corpulent']\n",
+      "['corroborate', 'coterie']\n",
+      "['countenance', 'coup']\n",
+      "['covert', 'covet']\n",
+      "['crave', 'criterion']\n",
+      "['cryptic', 'culminate']\n",
+      "['culpable', 'culprit']\n",
+      "['cumbersome', 'cumulative']\n",
+      "['cupidity', 'curry']\n",
+      "['cursory', 'curtail']\n",
+      "['dearth', 'debacle']\n",
+      "['debilitate', 'debris']\n",
+      "['decade', 'decadence']\n",
+      "['decapitate', 'declaim']\n",
+      "['decorum', 'decrepit']\n",
+      "['deem', 'defamatory']\n",
+      "['degrade', 'deleterious']\n",
+      "['delineation', 'delude']\n",
+      "['deluge', 'delve']\n",
+      "['demeanor', 'demur']\n",
+      "['denigrated', 'denote']\n",
+      "['denouement', 'depict']\n",
+      "['deplorable', 'deploy']\n",
+      "['deprecate', 'deride']\n",
+      "['derived', 'derogatory']\n",
+      "['desist', 'despot']\n",
+      "['destitution', 'desultory']\n",
+      "['deter', 'detriment']\n",
+      "['devout', 'dexterity']\n",
+      "['diatribe', 'dilatory']\n",
+      "['dilettante', 'diminutive']\n",
+      "['discern', 'disciple']\n",
+      "['discreet', 'disdain']\n",
+      "['disgruntled', 'disheveled']\n",
+      "['dismantle', 'disparage']\n",
+      "['disparate', 'dispersed']\n",
+      "['disseminate', 'dissent']\n",
+      "['distraught', 'diversity']\n",
+      "['divulge', 'docile']\n",
+      "['doddering', 'doleful']\n",
+      "['dolorous', 'domicile']\n",
+      "['dormant', 'dregs']\n",
+      "['drudgery', 'dubious']\n",
+      "['dulcet', 'dupe']\n",
+      "['duplicity', 'duress']\n",
+      "['edifice', 'efficacy']\n",
+      "['effigy', 'effrontery']\n",
+      "['egotist', 'egregious']\n",
+      "['elapse', 'elicit']\n",
+      "['elucidate', 'elusive']\n",
+      "['emaciated', 'emanating']\n",
+      "['embellish', 'eminent']\n",
+      "['emissary', 'emit']\n",
+      "['emulate', 'encomium']\n",
+      "['encumbrance', 'enervated']\n",
+      "['engrossed', 'enhance']\n",
+      "['enigma', 'ennui']\n",
+      "['entourage', 'entreaty']\n",
+      "['enunciate', 'epithet']\n",
+      "['epitome', 'equanimity']\n",
+      "['eradicate', 'erudite']\n",
+      "['eruption', 'escalation']\n",
+      "['eschew', 'ethics']\n",
+      "['euphemism', 'evaluate']\n",
+      "['evanescent', 'eventuate']\n",
+      "['evince', 'exacerbate']\n",
+      "['excoriate', 'excruciating']\n",
+      "['exhort', 'exonerate']\n",
+      "['expatriate', 'expedient']\n",
+      "['expedite', 'exploit']\n",
+      "['expunge', 'expurgate']\n",
+      "['extant', 'extenuating']\n",
+      "['extinct', 'extol']\n",
+      "['extortion', 'extraneous']\n",
+      "['extrinsic', 'exult']\n",
+      "['fabricate', 'façade']\n",
+      "['facet', 'facetious']\n",
+      "['facile', 'factitious']\n",
+      "['fallacious', 'falter']\n",
+      "['fastidious', 'fatal']\n",
+      "['fatuous', 'feasible']\n",
+      "['feint', 'felicitous']\n",
+      "['felon', 'ferment']\n",
+      "['fervid', 'fetish']\n",
+      "['fetter', 'fiasco']\n",
+      "['fiat', 'flabbergasted']\n",
+      "['flagrant', 'flamboyant']\n",
+      "['flay', 'fledgling']\n",
+      "['flout', 'fluctuate']\n",
+      "['foist', 'foment']\n",
+      "['forebodings', 'forthwith']\n",
+      "['fortuitous', 'fracas']\n",
+      "['fractious', 'frail']\n",
+      "['fraught', 'fray']\n",
+      "['frenetic', 'frenzy']\n",
+      "['fretful', 'frugal']\n",
+      "['fruitless', 'frustrate']\n",
+      "['fulsome', 'furtive']\n",
+      "['galvanize', 'gamut']\n",
+      "['garbled', 'garrulous']\n",
+      "['gaudy', 'gaunt']\n",
+      "['genocide', 'genre']\n",
+      "['germane', 'gesticulate']\n",
+      "['gist', 'glean']\n",
+      "['glib', 'glut']\n",
+      "['grandeur', 'gratuity']\n",
+      "['gregarious', 'grimace']\n",
+      "['grotesque', 'guile']\n",
+      "['guise', 'gullible']\n",
+      "['habitat', 'halcyon']\n",
+      "['hapless', 'harass']\n",
+      "['harbinger', 'haven']\n",
+      "['havoc', 'heinous']\n",
+      "['heresy', 'heterogeneous']\n",
+      "['hirsute', 'histrionics']\n",
+      "['hoard', 'hoax']\n",
+      "['homogeneous', 'hostile']\n",
+      "['humility', 'hyperbole']\n",
+      "['iconoclast', 'idyllic']\n",
+      "['ignominious', 'ilk']\n",
+      "['imbibe', 'imminent']\n",
+      "['impasse', 'impeccable']\n",
+      "['impede', 'imperative']\n",
+      "['imperceptible', 'imperturbable']\n",
+      "['impetuous', 'impious']\n",
+      "['implacable', 'implore']\n",
+      "['importune', 'impregnable']\n",
+      "['impresario', 'impromptu']\n",
+      "['imprudent', 'impunity']\n",
+      "['inadvertent', 'inane']\n",
+      "['inanimate', 'incapacitated']\n",
+      "['inchoate', 'incipient']\n",
+      "['incisive', 'inclement']\n",
+      "['incoherent', 'incompatibility']\n",
+      "['incongruous', 'incontrovertible']\n",
+      "['incredulous', 'incumbent']\n",
+      "['indict', 'indifference']\n",
+      "['indigenous', 'indigent']\n",
+      "['indiscriminate', 'indoctrinate']\n",
+      "['indolent', 'inebriated']\n",
+      "['ineffectual', 'inert']\n",
+      "['inevitable', 'inexorable']\n",
+      "['infallible', 'infamous']\n",
+      "['inflicted', 'infraction']\n",
+      "['ingratiate', 'inherent']\n",
+      "['ingratiate', 'inherent']\n",
+      "['inhibition', 'iniquity']\n",
+      "['initiate', 'innate']\n",
+      "['innocuous', 'inordinate']\n",
+      "['insatiable', 'insidious']\n",
+      "['insurgent', 'integral']\n",
+      "['interject', 'interloper']\n",
+      "['interminable', 'internecine']\n",
+      "['interrogate', 'intimidate']\n",
+      "['intrepid', 'intrinsic']\n",
+      "['introspective', 'inundate']\n",
+      "['invalidate', 'invective']\n",
+      "['inveigh', 'inveterate']\n",
+      "['inviolable', 'irascible']\n",
+      "['irate', 'irrational']\n",
+      "['irrelevant', 'itinerant']\n",
+      "['jaunty', 'jeopardize']\n",
+      "['jettison', 'jocose']\n",
+      "['jostle', 'jubilant']\n",
+      "['jurisdiction', 'juxtapose']\n",
+      "['labyrinth', 'laceration']\n",
+      "['lackluster', 'laconic']\n",
+      "['lampoon', 'landmark']\n",
+      "['largess', 'lassitude']\n",
+      "['latent', 'laudable']\n",
+      "['lax', 'legerdemain']\n",
+      "['legion', 'lethal']\n",
+      "['lethargic', 'levity']\n",
+      "['libel', 'liquidation']\n",
+      "['lithe', 'livid']\n",
+      "['loath', 'loathe']\n",
+      "['longevity', 'lucrative']\n",
+      "['lugubrious', 'lurid']\n",
+      "['macabre', 'machiavellian']\n",
+      "['magnanimous', 'maim']\n",
+      "['maladjusted', 'malady']\n",
+      "['malevolent', 'malign']\n",
+      "['malignant', 'malleable']\n",
+      "['malnutrition', 'mammoth']\n",
+      "['mandate', 'manifest']\n",
+      "['manifold', 'martinet']\n",
+      "['masticate', 'mastiff']\n",
+      "['materialism', 'matron']\n",
+      "['maudlin', 'megalomania']\n",
+      "['mendacious', 'menial']\n",
+      "['mentor', 'mercenary']\n",
+      "['metamorphosis', 'meticulous']\n",
+      "['mien', 'milieu']\n",
+      "['miscreant', 'modify']\n",
+      "['mollify', 'monolithic']\n",
+      "['moribund', 'mortal']\n",
+      "['mortality', 'mortify']\n",
+      "['motivate', 'mundane']\n",
+      "['munificent', 'murky']\n",
+      "['nadir', 'naive']\n",
+      "['nascent', 'nebulous']\n",
+      "['nefarious', 'negligible']\n",
+      "['neophyte', 'nepotism']\n",
+      "['nettle', 'neurotic']\n",
+      "['neutralize', 'nirvana']\n",
+      "['noisome', 'nomadic']\n",
+      "['nominal', 'nondescript']\n",
+      "['nonentity', 'nostalgia']\n",
+      "['nuance', 'nullify']\n",
+      "['nurture', 'nutritive']\n",
+      "['obese', 'obliterate']\n",
+      "['obloquy', 'obscure']\n",
+      "['obsequious', 'obsess']\n",
+      "['obsolescence', 'obviate']\n",
+      "['occult', 'octogenarian']\n",
+      "['odious', 'ominous']\n",
+      "['omnipotent', 'omnivorous']\n",
+      "['omnipotent', 'omnivorous']\n",
+      "['opprobrium', 'opulence']\n",
+      "['originate', 'ostensible']\n",
+      "['ostentatious', 'oust']\n",
+      "['pall', 'palliate']\n",
+      "['paltry', 'panacea']\n",
+      "['pandemonium', 'parable']\n",
+      "['paradox', 'paragon']\n",
+      "['paramount', 'pariah']\n",
+      "['paroxysm', 'parsimonious']\n",
+      "['passé', 'pathetic']\n",
+      "['pathological', 'patriarch']\n",
+      "['paucity', 'pecuniary']\n",
+      "['pedagogue', 'penance']\n",
+      "['penchant', 'penitent']\n",
+      "['pensive', 'penury']\n",
+      "['perceive', 'peregrination']\n",
+      "['peremptory', 'perfidious']\n",
+      "['perfunctory', 'permeate']\n",
+      "['pernicious', 'perpetrate']\n",
+      "['perpetuate', 'persevere']\n",
+      "['perspicacious', 'pertinent']\n",
+      "['peruse', 'perverse']\n",
+      "['pesky', 'phenomenon']\n",
+      "['phlegmatic', 'phobia']\n",
+      "['pinnacle', 'pique']\n",
+      "['pittance', 'placard']\n",
+      "['plaintiff', 'platitude']\n",
+      "['plethora', 'plight']\n",
+      "['poignant', 'polemic']\n",
+      "['ponder', 'potent']\n",
+      "['potentate', 'potential']\n",
+      "['potpourri', 'pragmatic']\n",
+      "['precedent', 'precipitate']\n",
+      "['preclude', 'precocious']\n",
+      "['prelude', 'premise']\n",
+      "['premonition', 'prerogative']\n",
+      "['prescient', 'prestigious']\n",
+      "['pretext', 'prevalent']\n",
+      "['prevarication', 'privation']\n",
+      "['procrastinate', 'prodigious']\n",
+      "['prodigy', 'proffer']\n",
+      "['profligate', 'profound']\n",
+      "['profuse', 'progeny']\n",
+      "['prognosticate', 'prohibition']\n",
+      "['prolific', 'promulgate']\n",
+      "['propagate', 'propensity']\n",
+      "['propinquity', 'propitious']\n",
+      "['propriety', 'protocol']\n",
+      "['proximity', 'prudent']\n",
+      "['pugnacious', 'puissant']\n",
+      "['pungent', 'puny']\n",
+      "['qualm', 'quandary']\n",
+      "['quarry', 'quell']\n",
+      "['rabid', 'raconteur']\n",
+      "['rail', 'raiment']\n",
+      "['ramifications', 'rampant']\n",
+      "['rapacious', 'rash']\n",
+      "['rationalize', 'raucous']\n",
+      "['raze', 'realm']\n",
+      "['rebuke', 'recant']\n",
+      "['recoil', 'recondite']\n",
+      "['redolent', 'redress']\n",
+      "['refute', 'regimen']\n",
+      "['relegate', 'remiss']\n",
+      "['remote', 'remuneration']\n",
+      "['repent', 'repertoire']\n",
+      "['replenish', 'replete']\n",
+      "['repose', 'reprehensible']\n",
+      "['repress', 'reprimand']\n",
+      "['reproach', 'repudiate']\n",
+      "['repugnant', 'repulse']\n",
+      "['reputed', 'requisite']\n",
+      "['resourceful', 'respite']\n",
+      "['restrictive', 'reticent']\n",
+      "['retort', 'retrospect']\n",
+      "['reverberating', 'revere']\n",
+      "['reverie', 'revert']\n",
+      "['reviled', 'rhetoric']\n",
+      "['rife', 'rift']\n",
+      "['risible', 'romp']\n",
+      "['roster', 'rudimentary']\n",
+      "['rue', 'ruminate']\n",
+      "['saga', 'sage']\n",
+      "['salient', 'sally']\n",
+      "['salubrious', 'salvation']\n",
+      "['sanctimonious', 'sanction']\n",
+      "['sanctuary', 'sanguine']\n",
+      "['satiety', 'saturate']\n",
+      "['schism', 'scion']\n",
+      "['scoff', 'scrutinize']\n",
+      "['scurrilous', 'scurry']\n",
+      "['sedate', 'sedentary']\n",
+      "['senile', 'serenity']\n",
+      "['servile', 'shibboleth']\n",
+      "['sinecure', 'singular']\n",
+      "['sinister', 'site']\n",
+      "['skirmish', 'slovenly']\n",
+      "['sojourn', 'solace']\n",
+      "['solicit', 'somber']\n",
+      "['sophistry', 'sordid']\n",
+      "['spate', 'specious']\n",
+      "['spew', 'spontaneous']\n",
+      "['sporadic', 'spurious']\n",
+      "['squeamish', 'stagnant']\n",
+      "['staunch', 'steeped']\n",
+      "['stentorian', 'stereotype']\n",
+      "['stigmatize', 'stipulate']\n",
+      "['strident', 'strife']\n",
+      "['stunted', 'stupor']\n",
+      "['stymie', 'subjugate']\n",
+      "['subservient', 'substantiate']\n",
+      "['subterfuge', 'subterranean']\n",
+      "['succinct', 'succulent']\n",
+      "['succumb', 'suffrage']\n",
+      "['sullen', 'sultry']\n",
+      "['sumptuous', 'superficial']\n",
+      "['superfluous', 'supine']\n",
+      "['supplication', 'surfeit']\n",
+      "['surge', 'surmise']\n",
+      "['surreptitious', 'susceptible']\n",
+      "['taboo', 'tacit']\n",
+      "['taint', 'tangible']\n",
+      "['tantalize', 'tantamount']\n",
+      "['taut', 'technology']\n",
+      "['temerity', 'tenable']\n",
+      "['tenacious', 'termagant']\n",
+      "['terminate', 'terse']\n",
+      "['therapy', 'thespian']\n",
+      "['throng', 'thwart']\n",
+      "['timorous', 'tinge']\n",
+      "['tolerate', 'tortuous']\n",
+      "['toxic', 'tradition']\n",
+      "['tranquil', 'transient']\n",
+      "['tremulous', 'trenchant']\n",
+      "['trend', 'trivial']\n",
+      "['truncated', 'turbulent']\n",
+      "['turpitude', 'tussle']\n",
+      "['ubiquitous', 'ultimate']\n",
+      "['umbrage', 'unabated']\n",
+      "['unconscionable', 'unctuous']\n",
+      "['underwrite', 'universal']\n",
+      "['unkempt', 'unmitigated']\n",
+      "['unsavory', 'unwieldy']\n",
+      "['urbane', 'usurp']\n",
+      "['vacillate', 'valor']\n",
+      "['vapid', 'vehemently']\n",
+      "['veneer', 'venerable']\n",
+      "['venial', 'venom']\n",
+      "['verbatim', 'vertigo']\n",
+      "['vestige', 'vexatious']\n",
+      "['viable', 'vicissitudes']\n",
+      "['vigil', 'vigilant']\n",
+      "['vigil', 'vigilant']\n",
+      "['vilify', 'vindicate']\n",
+      "['virile', 'virtuosity']\n",
+      "['virulent', 'vitiate']\n",
+      "['vitriolic', 'vituperation']\n",
+      "['vivacious', 'vogue']\n",
+      "['volition', 'voluble']\n",
+      "['voluminous', 'voracious']\n",
+      "['wan', 'wane']\n",
+      "['wary', 'wheedle']\n",
+      "['whet', 'whimsical']\n",
+      "['wince', 'wistful']\n",
+      "['zealous', 'zenith']\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_words = []\n",
+    "for l in lines:\n",
+    "    words = l[:-1].split(' ')\n",
+    "    if len(words)>1:\n",
+    "        print(words)\n",
+    "    for w in words:\n",
+    "        if len(w) > 1:\n",
+    "            my_words.append(w)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2210,28 +2695,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "25650485",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1232"
+       "959"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(my_word)"
+    "len(my_words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "7028e9a5",
    "metadata": {},
    "outputs": [],
@@ -2990,7 +3475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
