--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3442,18 +3442,343 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "8725b740",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d."
+    "def extract_words(path):    \n",
+    "    with open(path) as fd:\n",
+    "        lines = fd.readlines()\n",
+    "    return lines[0].split(', ')[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "771cd1d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_504 = extract_words('504.md')\n",
+    "words_4000_1 = extract_words('4000-1.md')\n",
+    "words_4000_2 = extract_words('4000-2.md')\n",
+    "words_4000_3 = extract_words('4000-3.md')\n",
+    "words_4000_4 = extract_words('4000-4.md')\n",
+    "words_ess = extract_words('essential-toefl.md')\n",
+    "words_400 = extract_words('400-1ed.md')\n",
+    "words_aef2_sb = extract_words('aef-2-sb-words.md')\n",
+    "words_aef2_wb = extract_words('aef-2-wb-words.md')\n",
+    "words_aef3a_sb = extract_words('aef-3a-words.md')\n",
+    "words_aef3b_sb = extract_words('aef-3b-words.md')\n",
+    "words_aef3a_wb = extract_words('aef-3a-wb-words.md')\n",
+    "words_aef3b_wb = extract_words('aef-3b-wb-words.md')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "91f1f5a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_4000 = []\n",
+    "words_4000 = words_4000 + words_4000_1\n",
+    "words_4000 = words_4000 + words_4000_2\n",
+    "words_4000 = words_4000 + words_4000_3\n",
+    "words_4000 = words_4000 + words_4000_4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "6149e4ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_aef_total = words_aef2_sb + words_aef2_wb + words_aef3a_sb +\\\n",
+    "                words_aef3b_sb + words_aef3a_wb + words_aef3b_wb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "ddea1ec0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imported_words = words_4000 + words_aef_total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "c4f5a9e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_words_that_exist(word_query,word_oracle):\n",
+    "    words_that_exit = []\n",
+    "    for w in word_query:\n",
+    "        if w in word_oracle:\n",
+    "            words_that_exit.append(w)\n",
+    "    \n",
+    "    return words_that_exit\n",
+    "\n",
+    "def find_words_that_dosent_exist(word_query,word_oracle):\n",
+    "    words_that_exit = []\n",
+    "    for w in word_query:\n",
+    "        if not w in word_oracle:\n",
+    "            words_that_exit.append(w)\n",
+    "    \n",
+    "    return words_that_exit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "f989598a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_504_imported = find_words_that_exist(words_504,imported_words)\n",
+    "words_ess_imported = find_words_that_exist(words_ess,imported_words)\n",
+    "words_400_imported = find_words_that_exist(words_400,imported_words)\n",
+    "\n",
+    "words_504_not_imported = find_words_that_dosent_exist(words_504,imported_words)\n",
+    "words_ess_not_imported = find_words_that_dosent_exist(words_ess,imported_words)\n",
+    "words_400_not_imported = find_words_that_dosent_exist(words_400,imported_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "91def518",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "287"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(words_ess_not_imported)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "398c190f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "250"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(words_504_not_imported)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "1614f789",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "252"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(words_400_not_imported)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "72a9f365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_ess_not_imported = find_words_that_dosent_exist(words_ess,imported_words)\n",
+    "imported_words = imported_words + words_ess\n",
+    "\n",
+    "words_504_not_imported = find_words_that_dosent_exist(words_504,imported_words)\n",
+    "imported_words = imported_words + words_504\n",
+    "\n",
+    "words_400_not_imported = find_words_that_dosent_exist(words_400,imported_words)\n",
+    "imported_words = imported_words + words_400\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "960bf844",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "287"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(words_ess_not_imported)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "6e64689a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "237"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(words_504_not_imported)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "e4366a32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "220"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(words_400_not_imported)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "1fd215ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_1100 = extract_words('1100.md')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "0c8f1177",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "959"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(words_1100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "db9fa860",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "788"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words_1100_not_imported = find_words_that_dosent_exist(words_1100,imported_words)\n",
+    "len(words_1100_not_imported)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0528460",
+   "id": "a84ff274",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "d929a9c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'asset' in imported_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "420eb7ea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3475,7 +3800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
