--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1693,18 +1693,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "8fb3e928",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('4000-3.txt') as fd:\n",
+    "with open('4000-6.txt') as fd:\n",
     "    lines = fd.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "fd71d93a",
    "metadata": {},
    "outputs": [],
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "e057383a",
    "metadata": {},
    "outputs": [
@@ -1727,7 +1727,7 @@
        "600"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1738,12 +1738,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "b3d4eee8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('4000-3.md','w+') as f:\n",
+    "with open('4000-6.md','w+') as f:\n",
     "    for w in my_words:\n",
     "        f.write(w+', ')\n",
     "    f.write('\\n')"
@@ -3465,6 +3465,8 @@
     "words_4000_2 = extract_words('4000-2.md')\n",
     "words_4000_3 = extract_words('4000-3.md')\n",
     "words_4000_4 = extract_words('4000-4.md')\n",
+    "words_4000_ = extract_words('4000-5.md')\n",
+    "words_4000_6 = extract_words('4000-6.md')\n",
     "words_ess = extract_words('essential-toefl.md')\n",
     "words_400 = extract_words('400-1ed.md')\n",
     "words_aef2_sb = extract_words('aef-2-sb-words.md')\n",
