--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3442,7 +3442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "8725b740",
    "metadata": {},
    "outputs": [],
@@ -3455,7 +3455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "id": "771cd1d3",
    "metadata": {},
    "outputs": [],
@@ -3465,7 +3465,7 @@
     "words_4000_2 = extract_words('4000-2.md')\n",
     "words_4000_3 = extract_words('4000-3.md')\n",
     "words_4000_4 = extract_words('4000-4.md')\n",
-    "words_4000_ = extract_words('4000-5.md')\n",
+    "words_4000_5 = extract_words('4000-5.md')\n",
     "words_4000_6 = extract_words('4000-6.md')\n",
     "words_ess = extract_words('essential-toefl.md')\n",
     "words_400 = extract_words('400-1ed.md')\n",
@@ -3479,7 +3479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "id": "91f1f5a8",
    "metadata": {},
    "outputs": [],
@@ -3488,12 +3488,14 @@
     "words_4000 = words_4000 + words_4000_1\n",
     "words_4000 = words_4000 + words_4000_2\n",
     "words_4000 = words_4000 + words_4000_3\n",
-    "words_4000 = words_4000 + words_4000_4"
+    "words_4000 = words_4000 + words_4000_4\n",
+    "words_4000 = words_4000 + words_4000_5\n",
+    "words_4000 = words_4000 + words_4000_6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 13,
    "id": "6149e4ad",
    "metadata": {},
    "outputs": [],
@@ -3504,7 +3506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "id": "ddea1ec0",
    "metadata": {},
    "outputs": [],
@@ -3514,7 +3516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 15,
    "id": "c4f5a9e7",
    "metadata": {},
    "outputs": [],
@@ -3538,7 +3540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 16,
    "id": "f989598a",
    "metadata": {},
    "outputs": [],
@@ -3554,17 +3556,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 17,
    "id": "91def518",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "287"
+       "221"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3575,17 +3577,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 18,
    "id": "398c190f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "250"
+       "169"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3596,17 +3598,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 19,
    "id": "1614f789",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "252"
+       "209"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3617,7 +3619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
    "id": "72a9f365",
    "metadata": {},
    "outputs": [],
@@ -3634,17 +3636,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 21,
    "id": "960bf844",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "287"
+       "221"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3655,17 +3657,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 22,
    "id": "6e64689a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "237"
+       "163"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3676,17 +3678,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 23,
    "id": "e4366a32",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "220"
+       "198"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
