--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3781,8 +3781,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "420eb7ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('The_Oxford_5000.txt') as fd:\n",
+    "    lines = fd.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3270d305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = [l.split(' ')[0] for l in lines]"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "aa805ad6",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4277dec6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('The_Oxford_3000.md','w+') as f:\n",
+    "    for w in words:\n",
+    "        f.write(w.lower()+', ')\n",
+    "    f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1eaf5f90",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3804,7 +3844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
