add ess for ielts

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3821,6 +3821,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "9d073d0b-10c3-405c-a152-decbddd2986a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('essential-ielts.txt') as fd:\n",
+    "    lines = fd.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "51b2a4cf-370c-4cf9-a651-e73cc544bf8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = [l.split(' ')[0] for l in lines]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2c443571-756a-40af-be7d-edef84eeb620",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "602"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "2ce8472e",
    "metadata": {},
@@ -3844,7 +3886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
